src/snapshots/jig__errors__tests__config_not_found_renders.snap
---
source: src/errors.rs
expression: render_for_snapshot(&err)
---
  × config file not found
  │   searched: jig.kdl, .jig.kdl
  │   from: /home/user/project/src up to: /home/user
  help: create a jig.kdl file with at least one command definition
