src/snapshots/jig__errors__tests__duplicate_alias_renders.snap
---
source: src/errors.rs
expression: render_for_snapshot(&err)
---
  × alias "serve" is defined more than once
   ╭─[jig.kdl:1:14]
 1 │ llama-server "serve" {}
   ·              ───┬───
   ·                 ╰── first defined here
 2 │ gemma-server "serve" {}
   ·              ───┬───
   ·                 ╰── also defined here
   ╰────
  help: each alias may be used by at most one command
